force-app/main/default/objects/custom_create227__c/custom_create227__c.object-meta.xml
<CustomObject>
    <label>Custom created object227</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects227</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>