force-app/main/default/objects/custom_create227__c/fields/custom_create_227field509__c.field-meta.xml
<CustomField>
    <fullName>custom_create_227field509__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 227field509</label>
    <type>Checkbox</type>
</CustomField>